--- a/Algoritmos/Site-Oficial/css/simulador.css
+++ b/Algoritmos/Site-Oficial/css/simulador.css
@@ -303,3 +303,12 @@ canvas {
     height: 300px;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+    background-color:#FAF2FF;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #0A5436;
+    border-radius: 5px;
+}
