--- a/Algoritmos/Site-Oficial/css/dashboard.css
+++ b/Algoritmos/Site-Oficial/css/dashboard.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
   }
 .img-bg{
     background-image: url('../Imagens/login-bg.jpg');
@@ -45,7 +45,7 @@ margin-bottom: 10px;
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-evenly;
   background-color: #CDD6CB;
   width: 200px;
@@ -236,7 +236,7 @@ width: 130px;
 height: 80px;
 background-color: rgb(112, 170, 112); 
 font-size: 25px; 
-font-family: Helvetica;
+font-family: Roboto;
 }
 .botoes button:hover{
 background-color: rgb(89, 133, 106);
@@ -251,7 +251,7 @@ width: 130px;
 height: 80px;
 background-color: rgb(112, 170, 112); 
 font-size: 25px; 
-font-family: Helvetica;
+font-family: 'Roboto';
 }
 
 .mãe {
@@ -264,11 +264,77 @@ font-family: Helvetica;
 }
 .mãe p {
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, 'Roboto', sans-serif;
 }
 .grafico1 {
 font-size: 60px;
 background-color: rgba(255, 255, 255, 0.363);
 font-family: 'Roboto';
 border-radius: 15px;
+}
+.tituloPrinc{
+display: flex;
+color:#2b2b2b;
+font-family: 'Roboto';
+font-size: 50px;
+color:#DB6901;
+
+}
+.tituloDiaria{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #CDD6CB;
+  font-family: 'Roboto';
+  color: #2b2b2b;
+  font-size: 35px;
+}
+.tituloAtual{
+  display: flex;
+  color:#2b2b2b;
+  font-size: 25px;
+  font-family: 'Roboto';
+}
+.tituloDiario{
+  display: flex;
+  color: #2b2b2b;
+  font-size: 25px;
+  font-family: 'Roboto';
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  
+}
+.tituloMensal{
+  display: flex;
+  color: #2b2b2b;
+  justify-content: center;
+  align-items: center;
+}
+.tsize1{
+  display: flex;
+  color: #2b2b2b;
+  align-items: center;
+  justify-content: center;
+flex-direction: column;
+margin-bottom: 80px;
+
+}
+.tsize2{
+display: flex;
+color: #2b2b2b;
+margin-bottom: 55px;
+}
+.tsize3{
+display: flex;
+color: #2b2b2b;
+margin-top: 100px;
+}
+.tituloAlerta{
+  display: flex;
+  color: #2b2b2b;
+  font-size: 35px;
+  font-family: 'Roboto';
+  justify-content: center;
+  align-items: center;
 }
