--- a/Algoritmos/Site-Oficial/css/home.css
+++ b/Algoritmos/Site-Oficial/css/home.css
@@ -12,7 +12,7 @@ body {
 }
 
 .main-color {
-    color: #0A5436;
+    color: rgb(10, 82, 53);
 }
 
 
@@ -56,7 +56,7 @@ body {
     transition: background-color 0.3s;
 }
 .volta {
-    background-color: #4E504D;
+    background-color: rgb(78, 80, 77);
     position: absolute;
     text-decoration: none;
     top: 35px;
@@ -85,7 +85,7 @@ body {
 }
 
 .login {
-    background-color: #0A5436;
+    background-color: rgb(10, 84, 54);
     color: white;
     font-weight: bolder;
 }
@@ -172,7 +172,7 @@ body {
     border: rgb(0, 0, 0, 0);
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
-    background-color: #BA8434;
+    background-color: rgb(186, 132, 52);
     color: white;
     padding: 25px;
     font-size: 25px;
